Update Phase 1 components and documentation
- Add demo_phase1.py with comprehensive system testing
- Update README.md with live demo results and system metrics
- Enhance code_review_log.md with Review #5
- Fix backtest engine column reference issue
- Update data provider for Binance public API integration
- Add python-dotenv dependency for environment management

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,9 @@
 # Get your API key at: https://polygon.io
 POLYGON_API_KEY=your_polygon_api_key_here
 
-# Binance - Primary data source for BTC
-# Get your API keys at: https://www.binance.com/en/my/settings/api-management
-BINANCE_API_KEY=your_binance_api_key_here
-BINANCE_API_SECRET=your_binance_api_secret_here
+# Binance - Public API for BTC data (no key required)
+# Futures API endpoint for market data
+BINANCE_FAPI_BASE=https://fapi.binance.com
 
 # ===========================================
 # Trading Configuration
