--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = "^3.12"
 dependencies = [
     "pandas>=2.0.0",
     "numpy>=1.24.0",
-    "pandas-ta>=0.3.14b0,<0.4.0",
+    "pandas-ta>=0.3.14b0",
     "backtrader>=1.9.76.123",
     "riskfolio-lib>=5.0.0",
     "scikit-learn>=1.3.0",
@@ -29,8 +29,8 @@ dependencies = [
     "mypy>=1.5.0",
     "yfinance>=0.2.18",
     "polygon-api-client>=1.14.0",
-    "python-binance>=1.0.17",
     "requests>=2.31.0",
+    "python-dotenv (>=1.2.1,<2.0.0)",
 ]
 
 [build-system]
