Phase 3: Machine Learning Enhancement (FR-3.1 to FR-3.5)
- FR-3.1: FeatureEngineer with price, macro, cross-sectional features
- FR-3.2: MLTrainer with XGBoost/LightGBM and Purged Walk-Forward CV
- FR-3.2: CPCV (Combinatorial Purged Cross-Validation) implementation
- FR-3.3: ModelEvaluator with IC, IC_IR, AUC-ROC, SHAP explainability
- FR-3.4: SignalFusion with 50% ML cap and auto-degradation
- FR-3.5: ModelLifecycleManager with drift detection and auto-retraining
- Add ML module with 6 new classes
- Add demo_phase3.py for ML pipeline validation
- Update README with Phase 3 features and system metrics
- Add Phase 3 config to strategy.yaml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "polygon-api-client>=1.14.0",
     "requests>=2.31.0",
     "python-dotenv (>=1.2.1,<2.0.0)",
+    "optuna>=3.3.0",
+    "shap>=0.42.0",
 ]
 
 [build-system]
