Phase 4: NLP Sentiment Analysis Module
- FR-4.1: News Sentiment Module with FinBERT (src/nlp/sentiment.py)
  - GDELT, RSS feeds, NewsAPI integration
  - Asset keyword mapping for sector/asset classification
  - Sentiment momentum calculation

- FR-4.2: CFTC COT Retail Sentiment (src/nlp/cot.py)
  - Commitment of Traders analysis
  - Contrarian signal generation (>90% = sell, <10% = buy)
  - Weekly COT data processing

- FR-4.3: Sentiment Factor Integration (src/nlp/integrator.py)
  - Feature combination: 60% news, 40% COT
  - SHAP validation for feature contribution
  - ML pipeline integration

- Config: strategy.yaml updated with Phase 4 settings
- Demo: demo_phase4.py for end-to-end validation

Review #8 completed.

--- a/config/strategy.yaml
+++ b/config/strategy.yaml
@@ -119,6 +119,32 @@ ml:
     drift_ks_retrain: 0.20
     min_ic_improvement: 0.01
 
+# Phase 4: NLP Sentiment Analysis (FR-4.x)
+nlp:
+  # FR-4.1: News Sentiment
+  news:
+    model_name: "ProsusAI/finbert"  # FinBERT for financial text
+    use_gpu: false
+    batch_size: 32
+    sentiment_momentum_window: 5  # 5-day MA for momentum
+    min_articles_per_day: 3
+    # Data sources (at least one must be enabled)
+    use_gdelt: true
+    use_rss: true
+    # newsapi_key: ""  # Optional: set in .env if using NewsAPI
+  
+  # FR-4.2: COT Sentiment
+  cot:
+    lookback_years: 3  # 3-year rolling percentile
+    bullish_threshold: 0.90  # >90% = extreme bullish (contrarian sell)
+    bearish_threshold: 0.10  # <10% = extreme bearish (contrarian buy)
+  
+  # FR-4.3: Sentiment Integration
+  integration:
+    news_weight: 0.6  # Weight for news sentiment
+    cot_weight: 0.4   # Weight for COT sentiment
+    min_shap_contribution: 0.05  # Remove if < 5% SHAP contribution
+
 # 4-Level Hierarchical Risk Control (from PRD FR-1.6)
 risk:
   levels:
