--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ dependencies = [
     "xgboost>=2.0.0",
     "lightgbm>=4.0.0",
     "transformers>=4.30.0",
+    "torch>=2.0.0",
+    "newsapi-python>=0.2.7",
+    "beautifulsoup4>=4.12.0",
+    "lxml>=4.9.0",
+    "html2text>=2020.1.16",
     "matplotlib>=3.7.0",
     "plotly>=5.15.0",
     "pydantic>=2.0.0",
