Phase 6 completion: Live Trading System implementation with Alpaca/Binance/IBKR integration, order management, capital transition, and live monitoring

--- a/.env.example
+++ b/.env.example
@@ -61,15 +61,22 @@ DATABASE_PATH=data/state.db
 CACHE_PATH=data/cache/price_cache.db
 
 # ===========================================
-# Broker Integration (Phase 2+)
+# Broker Integration (Phase 6 - Live Trading)
 # ===========================================
 
 # Alpaca - US Stock/ETF broker
+# Sign up at: https://alpaca.markets
 ALPACA_API_KEY=
 ALPACA_SECRET_KEY=
-ALPACA_BASE_URL=https://paper-api.alpaca.markets  # Paper trading
+ALPACA_PAPER=true  # true for paper trading, false for live
 
-# Interactive Brokers (optional)
+# Interactive Brokers (optional - requires TWS or IB Gateway)
 IBKR_HOST=127.0.0.1
 IBKR_PORT=7497
 IBKR_CLIENT_ID=1
+
+# Binance API (for crypto trading - optional)
+# Get your keys at: https://www.binance.com/en/my/settings/api-management
+BINANCE_API_KEY=
+BINANCE_API_SECRET=
+BINANCE_TESTNET=true  # true for testnet, false for live
