--- a/.env.example
+++ b/.env.example
@@ -78,5 +78,5 @@ IBKR_CLIENT_ID=1
 # Binance API (for crypto trading - optional)
 # Get your keys at: https://www.binance.com/en/my/settings/api-management
 BINANCE_API_KEY=
-BINANCE_API_SECRET=
+BINANCE_SECRET_KEY=
 BINANCE_TESTNET=true  # true for testnet, false for live
